--- a/app/client/css/layout/_grid.scss
+++ b/app/client/css/layout/_grid.scss
@@ -15,11 +15,14 @@
   height: 100%;
   justify-content: center;
   align-items: center;
+  header + & {
+    height: calc(100% - 60px);
+  }
 }
 
 .container {
   width: 100%;
   max-width: 500px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 3vh 20px;
 }
